delete events by tacher

--- a/SchoolManagmentApp/eventApp/templates/events.html
+++ b/SchoolManagmentApp/eventApp/templates/events.html
@@ -4,9 +4,9 @@
         <!-- filtering  -->
         {% if kid_id %}
             <div class="d-flex">
-                <div id="filterButton" class="filter-button">Filtering</div>
+                <div id="filterButton" class="filter-button mx-2">Filtering</div>
                 <a href="{% url 'parent_filter_events' %}" class="text-decoration-none">
-                    <div id="filterButton2" class="filter-button">Back</div>
+                    <div id="filterButton2" class="filter-button mx-2">Back</div>
                 </a>
             </div>
         {% else %}   
