--- a/SchoolManagmentApp/eventApp/templates/teacher_event_details.html
+++ b/SchoolManagmentApp/eventApp/templates/teacher_event_details.html
@@ -2,38 +2,47 @@
 {% block content %}
 
 
-    <div class="row pt-4 justify-content-center mt-4">
-        <div class="col-md-4 mb-4">
-            <div class="card-one">
-                <div class="text-center text-white">
-                    <h4 class="my-3" editable="inline">{{event.subject}}
-                    </h4>
-                    <div class="card-body">
-                        <h5 class="card-title text-center mb-3">{{event.event_type}}</h5>
-                        <h6 class="card-title text-center mb-3">Realisation: {{event.realisation_time}} </h6>
-                        <div class="mb-2 mt-2 card-divider"></div>
-                        <div class="">{{event.description}}</div>
-                        <div class="mt-2">{{event.text}}</div>
-                        <a class="text-decoration-none text-white" href="">
+<div class="row pt-4 justify-content-center mt-4">
+    <div class="col-md-4 mb-4">
+        <div class="card-one">
+            <div class="text-center text-white">
+                <h4 class="my-3" editable="inline">{{event.subject}}
+                </h4>
+                <div class="card-body">
+                    <h5 class="card-title text-center mb-3">{{event.event_type}}</h5>
+                    <h6 class="card-title text-center mb-3">Realisation: {{event.realisation_time}} </h6>
+                    <div class="mb-2 mt-2 card-divider"></div>
+                    <div class="">{{event.description}}</div>
+                    <div class="mt-2">{{event.text}}</div>
+                    <a class="text-decoration-none text-white" href="">
                         <div class="mt-2 size-up-hover">{{event.connected_to_lesson}}</div>
-                        </a>
-                        <div class="mb-2 mt-2 card-divider"></div>
-                        <div class="mt-2 text-muted">Added: {{event.add_time}}</div>
-                        <div class="card-subtitle mb-2 text-muted">Author: {{event.author}}</div>
-               
-                    
+                    </a>
+                    <div class="mb-2 mt-2 card-divider"></div>
+                    <div class="mt-2 text-muted">Added: {{event.add_time}}</div>
+                    <div class="card-subtitle mb-2 text-muted">Author: {{event.author}}</div>
+
+
                 </div>
             </div>
 
-            
 
-        <a href="{% url 'teacher_events' %}">
-            <i class="fa-solid fa-backward" style="color: #023602;"></i>
-        </a>
- 
+            <div class="d-flex">
+                <a href="{% url 'teacher_events' %}">
+                    <i class="fa-solid fa-backward back-button-image" style="color: #023602;"></i>
+                </a>
+                <a class="text-decoration-none" href="{% url 'delete_event' event.id %}">
+                    <div class="filter-button">Delete event</div>
+                </a>
+                <a class="text-decoration-none" href="">
+                    <div class="filter-button mx-2">Edit event</div>
+                </a>
             </div>
-        </div>
-        </div>
 
-        
-        {% endblock content %}
+
+            </a>
+        </div>
+    </div>
+</div>
+
+
+{% endblock content %}
