--- a/SchoolManagmentApp/eventApp/templates/event_detail.html
+++ b/SchoolManagmentApp/eventApp/templates/event_detail.html
@@ -26,7 +26,7 @@
             </div>
 
         <a href="{% url 'events' %}">
-            <i class="fa-solid fa-backward" style="color: #023602;"></i>
+            <i class="fa-solid fa-backward back-button-image" style="color: #023602;"></i>
         </a>
  
             </div>
