--- a/SchoolManagmentApp/eventApp/templates/teacher_event_details.html
+++ b/SchoolManagmentApp/eventApp/templates/teacher_event_details.html
@@ -1,9 +1,20 @@
 {% extends "base.html" %}
+{% load static%}
 {% block content %}
 
+<!-- delete confirmer -->
 
+<div class="d-flex justify-content-center pt-3">
+    <div id="myDeleteConfirmer" class="delete-post-window animate__slideInDown">
+        <p class="dialog-message">DO youy wanto to delete event?</p>
+        <button id="deleteConfirmButton" class="filter-button">Yes</button>
+        <button id="deleteCancelButton" class="filter-button">No</button>
+    </div>
+</div>
+
+<!-- event -->
 <div class="row pt-4 justify-content-center mt-4">
-    <div class="col-md-4 mb-4">
+    <div class="col-md-5 mb-4">
         <div class="card-one">
             <div class="text-center text-white">
                 <h4 class="my-3" editable="inline">{{event.subject}}
@@ -25,14 +36,17 @@
                 </div>
             </div>
 
-
-            <div class="d-flex">
+            <!-- detail buttons -->
+            <div class="d-flex justify-content-center">
                 <a href="{% url 'teacher_events' %}">
                     <i class="fa-solid fa-backward back-button-image" style="color: #023602;"></i>
                 </a>
-                <a class="text-decoration-none" href="{% url 'delete_event' event.id %}">
+
+                <a id="deleteEvent" onclick="showDialog()" class="text-decoration-none"
+                    href="{% url 'delete_event' event.id %}">
                     <div class="filter-button">Delete event</div>
                 </a>
+
                 <a class="text-decoration-none" href="">
                     <div class="filter-button mx-2">Edit event</div>
                 </a>
@@ -43,6 +57,7 @@
         </div>
     </div>
 </div>
+
 
 
 {% endblock content %}
