--- a/SchoolManagmentApp/usersApp/templates/index.html
+++ b/SchoolManagmentApp/usersApp/templates/index.html
@@ -44,7 +44,6 @@
 							<span></span>
 						</div>
 						<ul class="nav-list">
-							<li><a href="#">Home</a></li>
 							<li><a href="#">About project</a></li>
 							<li><a href="#">Authors</a></li>
 							{% if not user.is_authenticated %}
@@ -93,6 +92,7 @@
 							<input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="id_username" placeholder="Username">
 							<label for="id_password">Password:</label>
 							<input type="password" name="password" autocomplete="current-password" required="" id="id_password" placeholder="Password">
+							<input type="hidden" name="next" value="{{ next }}">
 							{% csrf_token %}
 							<button  type="submit">Log In</button>
 						</form>
