--- a/SchoolManagmentApp/usersApp/templates/index.html
+++ b/SchoolManagmentApp/usersApp/templates/index.html
@@ -44,12 +44,15 @@
 							<span></span>
 						</div>
 						<ul class="nav-list">
-							<li><a href="#">About project</a></li>
-							<li><a href="#">Authors</a></li>
-							{% if not user.is_authenticated %}
-								<li><a href=""><button id="login-nav-btn" class="login-nav-btn">Login</button></a></li>
-							{% else %}
+							{% if user.is_authenticated %}
+								<li><a href="{%url 'events'%}">Events</a></li>
+								<li><a href="{%url 'inbox'%}">Messages</a></li>
+								<li><a href="{% url 'update_user_profile'%}"><img class='avatar-pic' src="{{ user.profile.photo.url }}" alt=""></a></li>
 								<li><a href="{% url 'logout' %}"><button id="login-nav" class="login-nav-btn" >Logout</button></a></li>
+							{% else %}
+								<li><a href="#">About project</a></li>
+								<li><a href="#">Authors</a></li>
+								<li><a href=""><button id="login-nav-btn" class="login-nav-btn">Login</button></a></li>
 							{%endif%}
 						</ul>
 					</nav>
