--- a/SchoolManagmentApp/usersApp/templates/registration.html
+++ b/SchoolManagmentApp/usersApp/templates/registration.html
@@ -3,7 +3,7 @@
 {% load widget_tweaks %}
 {% load my_tags %}
 {% block title%}
-    GameCave
+    School Managment App
 {% endblock title %}
 {% block content%}
 <section class="first-section">
