--- a/SchoolManagmentApp/static/css/style.css
+++ b/SchoolManagmentApp/static/css/style.css
@@ -363,6 +363,11 @@ span {
   overflow: hidden;
 }
 
+.avatar-pic{
+  max-height: 60px;
+  max-width: 60px;
+}
+
 @media screen and (max-width: 930px) {
 }
 
