--- a/SchoolManagmentApp/eventApp/templates/teacher_event_details.html
+++ b/SchoolManagmentApp/eventApp/templates/teacher_event_details.html
@@ -47,7 +47,7 @@
                     <div class="filter-button">Delete event</div>
                 </a>
 
-                <a class="text-decoration-none" href="">
+                <a class="text-decoration-none" href="{% url 'edit_event' event.id %}">
                     <div class="filter-button mx-2">Edit event</div>
                 </a>
             </div>
