--- a/SchoolManagmentApp/messagesApp/templates/outbox.html
+++ b/SchoolManagmentApp/messagesApp/templates/outbox.html
@@ -49,34 +49,26 @@ my_tags %} {% block title%} SchoolManagmentApp {% endblock title %}
 			<h3 class="my-3 text-white">{{view_name}}</h3>
 			<div class="list-group">
 				<!-- Sample Email Items -->
-				<div class="list-group-item bg-transparent border-0 height60">
+				<a href="#" class="list-group-item bg-transparent border-0 height60">
 					<table class="table table-responsive-md">
 						<tbody class="">
 							{% for email in page_obj%}
-							{%if email.is_read_receiver%}
+							{%if email.is_read_sender%}
 								<tr class="">
-									<td class="text-center text-white text-decoration-none">
-										<a href="{%url 'email_is_important' email.id %}?source=inbox">
-											{%if email.is_important%}
-											<i class="icon fa-solid fa-star" style="color: #ffff00;"></i>
-											{%else%}
-											<i class="icon fa fa-star-o"></i>
-											{%endif%}
+									<td class="text-white text-decoration-none">
+										<a class="text-reset text-white" href="{{ email.get_absolute_url }}">
+											{{email.receiver}}
 										</a>
 									</td>
 									<td class="text-white text-decoration-none">
 										<a class="text-reset text-white" href="{{ email.get_absolute_url}}">
-											{{email.sender}}
+											{{email.title}}
 										</a>
 									</td>
-
-									<td class="text-white text-decoration-none">
-										<a class="text-reset text-white" href="{{ email.get_absolute_url}}">
-										{{email.title}}</a>
-									</td>
-									
 									<td class="text-center text-white text-decoration-none">
-										<a class="text-reset text-white" href="{{ email.get_absolute_url}}">{{email.date}}</a>
+										<a class="text-reset text-white" href="{{ email.get_absolute_url}}">
+											{{email.date}}
+										</a>
 									</td>
 									{%if not email.is_important %}
 									<td class="text-center text-white text-decoration-none">
@@ -86,23 +78,13 @@ my_tags %} {% block title%} SchoolManagmentApp {% endblock title %}
 								</tr>
 								{%else%}
 								<tr class="bolded">
-									<td class="text-center text-white text-decoration-none">
-										<a href="{%url 'email_is_important' email.id %}?source=inbox">
-										{%if email.is_important%}
-										<i class="icon fa-solid fa-star" style="color: #ffff00;"></i>
-										{%else%}
-										<i class="icon fa fa-star-o"></i>
-										{%endif%}
-									</a>
-									</td>
 									<td class="text-white text-decoration-none">
 										<a class="text-reset text-white" href="{{ email.get_absolute_url}}">
-											{{email.sender}}
+											{{email.receiver}}
 										</a>
 									</td>
 									<td class="text-white text-decoration-none">
-										<a class="text-reset text-white" href="{{ email.get_absolute_url}}">
-										{{email.title}}</a>
+										<a class="text-reset text-white" href="{{ email.get_absolute_url}}">{{email.title}}</a>
 									</td>
 									<td class="text-center text-white text-decoration-none">
 										<a class="text-reset text-white" href="{{ email.get_absolute_url}}">{{email.date}}</a>
@@ -117,7 +99,7 @@ my_tags %} {% block title%} SchoolManagmentApp {% endblock title %}
 							{%endfor%}
 						</tbody>
 					</table>
-				</div>
+				</a>
 				<ul class="pagination justify-content-end">
 					<li class="page-item">
 						{% if page_obj.has_previous %}
