--- a/SchoolManagmentApp/static/css/style.css
+++ b/SchoolManagmentApp/static/css/style.css
@@ -1,371 +1,378 @@
 * {
-  margin: 0;
-  box-sizing: border-box;
-  padding: 0;
-  font-family: "Poppins", sans-serif;
-  text-decoration: none;
-  overflow-y: hidden;
+	margin: 0;
+	box-sizing: border-box;
+	padding: 0;
+	font-family: "Poppins", sans-serif;
+	text-decoration: none;
+	overflow-y: hidden;
 }
 
 body {
-  overflow-x: hidden;
+	overflow-x: hidden;
 }
 
 .main-width {
-  width: 1580px;
-  max-width: 95%;
-  margin: 0 auto;
-  padding: 0px 20px;
+	width: 1580px;
+	max-width: 95%;
+	margin: 0 auto;
+	padding: 0px 20px;
 }
 
 .hero {
-  width: 100%;
-  height: 100%;
-  min-height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/university_1920.jpg);
-  background-size: cover;
-  background-position: center;
-  position: relative;
+	width: 100%;
+	height: 100%;
+	min-height: 100vh;
+	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+		url(../img/university_1920.jpg);
+	background-size: cover;
+	background-position: center;
+	position: relative;
 }
 
 header {
-  padding: 20px 0 20px;
-  display: flex;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: 2px solid rgba(255, 255, 255, 0.201);
+	display: flex;
+	flex-wrap: nowrap;
+	align-items: center;
+	justify-content: space-between;
+	padding: 0px 10px 0px;
 }
 
 .logo img {
-  height: 80px;
-  width: 80px;
-  background: transparent;
-  border-radius: 50%;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  -moz-tab-size: 20px;
-    -o-tab-size: 20px;
-       tab-size: 20px;
-  cursor: pointer;
+	height: 62px;
+	width: 62px;
+	background: transparent;
+	border-radius: 50%;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	-moz-tab-size: 20px;
+	-o-tab-size: 20px;
+	tab-size: 20px;
+	cursor: pointer;
+}
+
+.nav-list {
+	margin-bottom: 0px;
 }
 
 nav .hamb {
-  width: 35px;
-  height: 24px;
-  right: 3%;
-  top: 60px;
-  z-index: 5;
-  background-color: transparent;
-  position: absolute;
-  cursor: pointer;
-  display: none;
+	width: 35px;
+	height: 24px;
+	right: 3%;
+	top: 40px;
+	z-index: 5;
+	background-color: transparent;
+	position: absolute;
+	cursor: pointer;
+	display: none;
 }
 
 nav .hamb span {
-  display: block;
-  background: #2ecc71;
-  width: 100%;
-  height: 3px;
-  transition: 0.4s;
-  transition-property: transform, opacity;
+	display: block;
+	background: #2ecc71;
+	width: 100%;
+	height: 3px;
+	transition: 0.4s;
+	transition-property: transform, opacity;
 }
 
 nav .hamb span:nth-child(2) {
-  margin: 7px 0px;
+	margin: 7px 0px;
 }
 
 nav .nav-list {
-  list-style: none;
-  display: flex;
-  align-items: center;
+	list-style: none;
+	display: flex;
+	align-items: center;
 }
 
 nav .nav-list li {
-  display: inline-block;
+	display: inline-block;
 }
 
 nav .nav-list li a {
-  display: inline-block;
-  color: #eee;
-  margin-left: 55px;
-  font-size: 18px;
-  font-weight: 600;
+	display: inline-block;
+	color: #eee;
+	margin-left: 55px;
+	font-size: 18px;
+	font-weight: 600;
 }
 
 nav .nav-list li:not(:last-child) a:hover {
-  color: #2ecc71;
-  transition: 0.4s;
+	color: #2ecc71;
+	transition: 0.4s;
 }
 
 .login-nav-btn {
-  font-size: 18px;
-  display: inline-block;
-  background: transparent;
-  border: 2px solid #2ecc71;
-  padding: 9px 28px;
-  border-radius: 30px;
-  line-height: 1.3;
-  color: #2ecc71;
-  font-weight: 500;
+	font-size: 18px;
+	display: inline-block;
+	background: transparent;
+	border: 2px solid #2ecc71;
+	padding: 9px 28px;
+	border-radius: 30px;
+	line-height: 1.3;
+	color: #2ecc71;
+	font-weight: 500;
 }
 
-.login-nav-btn:hover{
-  background: #2ecc71;
-  color: #fff;
-  border: 2px solid transparent;
-  transition: 0.4s;
+.login-nav-btn:hover {
+	background: #2ecc71;
+	color: #fff;
+	border: 2px solid transparent;
+	transition: 0.4s;
 }
 
 .container {
-  padding-top: 20%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-left: 10%;
-  padding-right: 10%;
+	padding-top: 20%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding-left: 10%;
+	padding-right: 10%;
 }
 .container .login-form,
 .container .hero-text {
-  margin-bottom: 40px;
-  overflow-y: hidden;
-  max-width: 50%;
+	margin-bottom: 40px;
+	overflow-y: hidden;
+	max-width: 50%;
 }
 
 .container .hero-text h1 {
-  color: white;
-  font-size: 47px;
-  font-weight: 900;
-  line-height: 1.2;
-  margin: 20px 0px 20px;
+	color: white;
+	font-size: 47px;
+	font-weight: 900;
+	line-height: 1.2;
+	margin: 20px 0px 20px;
 }
 
 span {
-  color: #2ecc71;
+	color: #2ecc71;
 }
 
 .container .hero-text h3 {
-  color: #eee;
-  font-weight: 400;
-  font-size: 22px;
+	color: #eee;
+	font-weight: 400;
+	font-size: 22px;
 }
 
 .container .hero-text p {
-  width: 540px;
-  max-width: 100%;
-  color: #eee;
-  font-size: 18px;
-  line-height: 1.5;
-  margin-bottom: 30px;
+	width: 540px;
+	max-width: 100%;
+	color: #eee;
+	font-size: 18px;
+	line-height: 1.5;
+	margin-bottom: 30px;
 }
 
 .social a {
-  width: 37px;
-  height: 37px;
-  border-radius: 50%;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 17px;
-  color: #eee;
-  cursor: pointer;
-  margin-right: 20px;
-  background-color: rgba(255, 255, 255, 0.1);
-  margin-bottom: 35px;
+	width: 37px;
+	height: 37px;
+	border-radius: 50%;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 17px;
+	color: #eee;
+	cursor: pointer;
+	margin-right: 20px;
+	background-color: rgba(255, 255, 255, 0.1);
+	margin-bottom: 35px;
 }
 
 .social a:hover {
-  transform: scale(1.1);
-  background: #2ecc71;
-  transition: 0.4s;
+	transform: scale(1.1);
+	background: #2ecc71;
+	transition: 0.4s;
 }
 
 .container .hero-text button {
-  color: #eee;
-  background: #2ecc71;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 24px;
-  padding: 8px 30px;
-  border: 2px solid #2ecc71;
-  border-radius: 30px;
-  cursor: pointer;
+	color: #eee;
+	background: #2ecc71;
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 24px;
+	padding: 8px 30px;
+	border: 2px solid #2ecc71;
+	border-radius: 30px;
+	cursor: pointer;
 }
 
 .container .hero-text button:hover {
-  background: transparent;
-  border: 2px solid #2ecc71;
-  color: #2ecc71;
-  transition: 0.4s;
+	background: transparent;
+	border: 2px solid #2ecc71;
+	color: #2ecc71;
+	transition: 0.4s;
 }
 
 .bottom p {
-  color: #eee;
-  letter-spacing: 2px;
-  font-size: 15px;
+	color: #eee;
+	letter-spacing: 2px;
+	font-size: 15px;
 }
 
 @media screen and (max-width: 930px) {
-  nav .hamb {
-    display: initial;
-  }
-  .click {
-    top: 46px;
-  }
-  .click span {
-    position: absolute;
-    margin-top: 12px;
-  }html
-  .click span:first-child {
-    transform: rotate(-40deg);
-  }
-  .click span:nth-child(2) {
-    opacity: 0;
-    margin: 0;
-  }
-  .click span:last-child {
-    transform: rotate(40deg);
-    top: 0;
-  }
-  nav .nav-list {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    top: 90px;
-    right: -65%;
-    bottom: 0;
-    width: 60%;
-    height: 30%;
-    background: black;
-    z-index: 2;
-    padding: 6% 9%;
-    transition: 0.3s right;
-    border-radius: 10px;
-  }
-  
-  nav .nav-list li {
-    display: block;
-  }
-  nav .nav-list li a {
-    display: block;
-    text-align: center;
-    font-size: 18px;
-    font-weight: 400;
-    margin-left: 0;
-    margin-bottom: 40px;
-  }
-  nav .nav-list li.btn a {
-    position: absolute;
-    bottom: 0%;
-    right: 20%;
-    left: 20%;
-    padding: 7px 15px;
-    font-size: 14px;
-  }
-  nav .nav-list.open {
-    right: 0;
-  }
-  .container .hero-text h1 {
-    font-size: 25px;
-  }
-  .container .hero-text h3 {
-    font-size: 16px;
-  }
-  .container .hero-text p {
-    font-size: 16px;
-  }
+	nav .hamb {
+		display: initial;
+	}
+	.click {
+		top: 46px;
+	}
+	.click span {
+		position: absolute;
+		margin-top: 12px;
+	}
+	html .click span:first-child {
+		transform: rotate(-40deg);
+	}
+	.click span:nth-child(2) {
+		opacity: 0;
+		margin: 0;
+	}
+	.click span:last-child {
+		transform: rotate(40deg);
+		top: 0;
+	}
+	nav .nav-list {
+		position: absolute;
+		display: flex;
+		flex-direction: column;
+		top: 90px;
+		right: -65%;
+		bottom: 0;
+		width: 60%;
+		height: 30%;
+		background: black;
+		z-index: 2;
+		padding: 6% 9%;
+		transition: 0.3s right;
+		border-radius: 10px;
+	}
+
+	nav .nav-list li {
+		display: block;
+	}
+	nav .nav-list li a {
+		display: block;
+		text-align: center;
+		font-size: 18px;
+		font-weight: 400;
+		margin-left: 0;
+		margin-bottom: 40px;
+	}
+	nav .nav-list li.btn a {
+		position: absolute;
+		bottom: 0%;
+		right: 20%;
+		left: 20%;
+		padding: 7px 15px;
+		font-size: 14px;
+	}
+	nav .nav-list.open {
+		right: 0;
+	}
+	.container .hero-text h1 {
+		font-size: 25px;
+	}
+	.container .hero-text h3 {
+		font-size: 16px;
+	}
+	.container .hero-text p {
+		font-size: 16px;
+	}
+	.logo {
+		border: none;
+		background-image: none;
+	}
 }
 
-
 .login-form {
-  height: 550px;
-  width: 400px;
-  background-color: rgba(255, 255, 255, 0.03);
-  border-radius: 10px;
-  backdrop-filter: blur(15px);
-  border: 2px solid rgba(255, 255, 255, 0.1);
-  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
-  padding: 50px 35px;
-  display: flex;
-  flex-direction: column;
-  align-items: center; 
-  transition: opacity .7s;
+	height: 550px;
+	width: 400px;
+	background-color: rgba(255, 255, 255, 0.03);
+	border-radius: 10px;
+	backdrop-filter: blur(15px);
+	border: 2px solid rgba(255, 255, 255, 0.1);
+	box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+	padding: 50px 35px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	transition: opacity 0.7s;
 }
 
 .login-form * {
-  font-family: "Poppins", sans-serif;
-  color: #ffffff;
-  letter-spacing: 0.5px;
-  outline: none;
-  border: none;
+	font-family: "Poppins", sans-serif;
+	color: #ffffff;
+	letter-spacing: 0.5px;
+	outline: none;
+	border: none;
 }
 
 .login-form form h3 {
-  font-size: 40px;
-  font-weight: 700;
-  line-height: 60px;
-  text-align: center;
+	font-size: 40px;
+	font-weight: 700;
+	line-height: 60px;
+	text-align: center;
 }
 
 .login-form form label {
-  display: block;
-  margin-top: 30px;
-  font-size: 16px;
-  font-weight: 500;
+	display: block;
+	margin-top: 30px;
+	font-size: 16px;
+	font-weight: 500;
 }
 
 .login-form form input {
-  display: block;
-  height: 50px;
-  width: 100%;
-  background-color: rgba(255, 255, 255, 0.05);
-  border-radius: 3px;
-  padding: 0 10px;
-  margin-top: 8px;
-  font-size: 14px;
-  font-weight: 300;
+	display: block;
+	height: 50px;
+	width: 100%;
+	background-color: rgba(255, 255, 255, 0.05);
+	border-radius: 3px;
+	padding: 0 10px;
+	margin-top: 8px;
+	font-size: 14px;
+	font-weight: 300;
 }
 
 .login-form form input:hover {
-  outline: 2px solid #0001;
+	outline: 2px solid #0001;
 }
 
 .login-form form button {
-  margin-top: 50px;
-  width: 100%;
-  background-color: transparent;
-  color: #eee;
-  padding: 15px 0;
-  font-size: 18px;
-  font-weight: 600;
-  border-radius: 5px;
-  border: 2px solid #2ecc71;
-  cursor: pointer;
+	margin-top: 50px;
+	width: 100%;
+	background-color: transparent;
+	color: #eee;
+	padding: 15px 0;
+	font-size: 18px;
+	font-weight: 600;
+	border-radius: 5px;
+	border: 2px solid #2ecc71;
+	cursor: pointer;
 }
-
 
 .container .hero-text button {
-  color: #eee;
-  background: #2ecc71;
-  letter-spacing: 2px;
-  font-size: 15px;
-  font-weight: 500;
-  line-height: 24px;
-  padding: 8px 30px;
-  border: 2px solid #2ecc71;
-  border-radius: 30px;
-  cursor: pointer;
+	color: #eee;
+	background: #2ecc71;
+	letter-spacing: 2px;
+	font-size: 15px;
+	font-weight: 500;
+	line-height: 24px;
+	padding: 8px 30px;
+	border: 2px solid #2ecc71;
+	border-radius: 30px;
+	cursor: pointer;
 }
 
-.login-form-hide{
-  opacity: 0;
-  overflow: hidden;
+.login-form-hide {
+	opacity: 0;
+	overflow: hidden;
 }
 
-.avatar-pic{
-  max-height: 60px;
-  max-width: 60px;
+.avatar-pic {
+	margin-top: 5px ;
+	max-height: 60px;
+	max-width: 60px;
 }
 
 @media screen and (max-width: 930px) {
@@ -374,42 +381,42 @@ span {
 @media only screen and (max-width: 600px) {
 }
 
-
-.red{
+.red {
 	background-color: red;
 }
 
-.green{
+.green {
 	background-color: limegreen;
 }
-
-.message{
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  font-size: 20px;
-  padding: 10px;
-  color: white;
-  text-align: center;
-  z-index: 9999;
-  display: inherit;
-  animation: errorAnimation 10s cubic-bezier(0.5, 0, 0.5, 1) forwards;
+.message {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	font-size: 20px;
+	padding: 10px;
+	color: white;
+	text-align: center;
+	display: inherit;
+	animation: errorAnimation 10s cubic-bezier(0.5, 0, 0.5, 1) forwards;
 }
 
 @keyframes errorAnimation {
-    0% {
-        opacity: 0;
-    }
+	0% {
+		z-index: 100;
+		opacity: 0;
+	}
 
-	25%{
+	25% {
 		opacity: 100;
 	}
-    50% {
-        opacity: 100;
-    }
+	50% {
+		opacity: 100;
+	}
 
-    100% {
-        opacity: 0;
-    }
+	100% {
+		opacity: 0;
+		z-index: 0;
+	}
 }
+
