confirmation window display fix

--- a/SchoolManagmentApp/eventApp/templates/teacher_event_details.html
+++ b/SchoolManagmentApp/eventApp/templates/teacher_event_details.html
@@ -6,7 +6,7 @@
 
 <div class="d-flex justify-content-center pt-3">
     <div id="myDeleteConfirmer" class="delete-post-window animate__slideInDown">
-        <p class="dialog-message">DO youy wanto to delete event?</p>
+        <p class="dialog-message">Do youy wanto to delete event?</p>
         <button id="deleteConfirmButton" class="filter-button">Yes</button>
         <button id="deleteCancelButton" class="filter-button">No</button>
     </div>
@@ -57,7 +57,7 @@
         </div>
     </div>
 </div>
-
+<script type="text/javascript" src="{% static 'js/delete_confirm.js' %}"></script>
 
 
 {% endblock content %}
