--- a/SchoolManagmentApp/eventApp/templates/teacher_events.html
+++ b/SchoolManagmentApp/eventApp/templates/teacher_events.html
@@ -59,7 +59,7 @@
     <div class="row">
         <div class="col-md-12 text-center">
             <div class="lc-block">
-                <h2 editable="inline" class="display-4 mb-2 text-white"><b>Events u submitted:</b></h2>
+                <h2 editable="inline" class="display-4 mb-2 text-white"><b>Events you submitted:</b></h2>
             </div>
         </div>
     </div>
